Updated design and added resume

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1>LAVANYA R</h1>
     <p>Computer Science Student | Aspiring Developer</p>
-    <a href="file:///C:/Users/lavan/OneDrive/Desktop/LAVANYAR_CV.pdf" download class="btn">📄 Download Resume</a>
+    <a href="LavanyaResume.pdf" download class="btn">📄 Download Resume</a>
   </header>
 
   <section class="about">
@@ -19,7 +19,10 @@
 
   <section class="projects">
     <h2>Projects</h2>
-    <p>Projects will be added soon!</p>
+    <ul>
+      <li>Chat App – Node.js + Socket.IO</li>
+      <li>Student Result System – Java + MySQL</li>
+    </ul>
   </section>
 
   <section class="contact">
