--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
   <header>
     <h1>LAVANYA R</h1>
     <p>Computer Science Student | Aspiring Developer</p>
-    <a href="LavanyaResume.pdf" download class="btn">📄 Download Resume</a>
+    <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
   </header>
 
   <section class="about">
@@ -20,10 +19,7 @@
 
   <section class="projects">
     <h2>Projects</h2>
-    <ul>
-      <li>Chat App – Node.js + Socket.IO</li>
-      <li>Student Result System – Java + MySQL</li>
-    </ul>
+    <p>Projects will be added soon!</p>
   </section>
 
   <section class="contact">
@@ -33,37 +29,3 @@
   </section>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-  <title>LAVANYA R | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>LAVANYA R</h1>
-    <p>CSE Student | Developer</p>
-  </header>
-
-  <section>
-    <h2>About Me</h2>
-    <p>I am a Computer Science student passionate about building software and learning new technologies.</p>
-  </section>
-
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li>Chat App – Node.js + Socket.IO</li>
-      <li>Student Result System – Java + MySQL</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Contact</h2>
-    <p>Email: lavanyaravikumar2004@gmail.com</p>
-    <p>LinkedIn: https://www.linkedin.com/in/lavanya-r-7a55492b3</p>
-  </section>
-</body>
-</html>
->>>>>>> c927f2a9737e250329d4f7e8b0b9db069611a205
