--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <header>
     <h1>LAVANYA R</h1>
     <p>Computer Science Student | Aspiring Developer</p>
+    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic">
     <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
   </header>
 
