Cleaned CSS and fixed photo layout

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="header-flex">
   <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic">
-  <h1>LAVANYA R</h1>
-  <p>Computer Science Student | Aspiring Developer</p>
-  <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
+  <div class="intro">
+    <h1>LAVANYA R</h1>
+    <p>Computer Science Student | Aspiring Developer</p>
+    <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
+  </div>
 </header>
+
 
   <section class="about">
     <h2>About Me</h2>
