Updated HTML and CSS layout

--- a/index.html
+++ b/index.html
@@ -2,34 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LAVANYA R | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header-flex">
-  <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic">
-  <div class="intro">
-    <h1>LAVANYA R</h1>
-    <p>Computer Science Student | Aspiring Developer</p>
-    <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
-  </div>
-</header>
 
+  <header class="header-flex">
+    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic">
+    <div class="intro">
+      <h1>LAVANYA R</h1>
+      <p>Computer Science Student | Aspiring Developer</p>
+      <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
+    </div>
+  </header>
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I’m passionate about web development, building real-world apps, and learning new technologies.</p>
+    <p>I’m a curious learner, passionate about web development and eager to explore real-world software solutions. I'm currently learning HTML, CSS, JavaScript, and GitHub.</p>
   </section>
 
   <section class="projects">
     <h2>Projects</h2>
-    <p>Projects will be added soon!</p>
+    <p>Projects coming soon! I'm currently building my skills and excited to showcase my work here.</p>
   </section>
 
   <section class="contact">
     <h2>Contact Me</h2>
-    <p>Email: lavanyaravikumar2004@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/lavanya-r-7a55492b3">linkedin.com/in/lavanya</a></p>
+    <p>📧 Email: <a href="mailto:lavanyaravikumar2004@gmail.com">lavanyaravikumar2004@gmail.com</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/lavanya-r-7a55492b3" target="_blank">linkedin.com/in/lavanya</a></p>
+    <p>🌍 GitHub: <a href="https://github.com/Lavanyaravikumar2004" target="_blank">github.com/Lavanyaravikumar2004</a></p>
   </section>
+
 </body>
 </html>
