Initial commit with grade calculator and PWA setup

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
   </section>
 
   <section class="projects">
-    <h2>Projects</h2>
-    <p>Projects coming soon! I'm currently building my skills and excited to showcase my work here.</p>
-  </section>
+  <h2>Projects</h2>
+  <ul>
+    <li>
+      <a href="grade.html" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
+    </li>
+  </ul>
+</section>
 
   <section class="contact">
     <h2>Contact Me</h2>
