--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -18,8 +18,8 @@
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(reg => console.log('✅ Service Worker Registered'))
-        .catch(err => console.error('❌ Service Worker Error:', err));
+        .then(reg => console.log('✅ Service Worker Registered:', reg.scope))
+        .catch(err => console.error('❌ Service Worker registration failed:', err));
     }
   </script>
 </head>
@@ -34,6 +34,7 @@
     <p id="result"></p>
   </div>
 
+  <!-- ✅ JavaScript -->
   <script src="grade.js"></script>
 </body>
 </html>
