Added both 192x192 and 512x512 icons for PWA and favicon

--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -8,7 +8,8 @@
   <!-- ✅ PWA Setup -->
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#6a0dad" />
-  <link rel="icon" href="icon-192.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" />
 
   <!-- ✅ CSS & Fonts -->
   <link rel="stylesheet" href="grade.css" />
