Update portfolio link to Grade Calculator PWA

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h2>Projects</h2>
   <ul>
     <li>
-      <a href="grade.html" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
+      <a href="grade.calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
   </ul>
 </section>
