Added To-Do List PWA project

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <li>
       <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
+    <li>
+      <a href="todo-app" target="_blank">📝 To-Do List App</a> – A simple and offline-capable task manager built as a PWA.
+    </li>
   </ul>
 </section>
 
