Update: Added To-Do List App link to portfolio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
     <li>
-      <a href="todo-app" target="_blank">📝 To-Do List App</a> – A simple and offline-capable task manager built as a PWA.
+      <a href="todo-app/" target="_blank">📝 To-Do List App</a> – A lightweight PWA to manage daily tasks with offline support.
     </li>
   </ul>
 </section>
