Upgrade: To-Do App UI with interactivity and localStorage

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -3,35 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>📝 To-Do App</title>
+  <title>📝 My To-Do List</title>
   <link rel="stylesheet" href="todo.css">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4CAF50">
+  <meta name="theme-color" content="#6a11cb">
   <link rel="icon" href="icon-192.png" />
 </head>
 <body>
-  <div class="container">
-    <h1>✅ To-Do List</h1>
-    <input type="text" id="taskInput" placeholder="Enter a new task..." />
-    <button onclick="addTask()">Add Task</button>
+  <div class="app-container">
+    <h1>📋 My To-Do List</h1>
+    <input id="taskInput" type="text" placeholder="Enter a new task...">
+    <button onclick="addTask()">Add</button>
     <ul id="taskList"></ul>
-    <button onclick="toggleDarkMode()">🌓 Toggle Mode</button>
+    <div class="actions">
+      <button onclick="toggleDarkMode()">🌓 Mode</button>
+      <button onclick="clearAll()">🗑️ Clear All</button>
+    </div>
   </div>
 
   <script src="todo.js"></script>
   <script>
-    let deferredPrompt;
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      const installBtn = document.createElement("button");
-      installBtn.textContent = "📲 Install App";
-      installBtn.onclick = () => {
-        deferredPrompt.prompt();
-      };
-      document.body.appendChild(installBtn);
-    });
-
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
     }
