--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>📝 My To-Do List</title>
-  <link rel="stylesheet" href="todo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pro To-Do List App</title>
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#6a11cb">
-  <link rel="icon" href="icon-192.png" />
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="icon" href="icon-192.png">
 </head>
 <body>
-  <div class="app-container">
-    <h1>📋 My To-Do List</h1>
-    <input id="taskInput" type="text" placeholder="Enter a new task...">
-    <button onclick="addTask()">Add</button>
+  <div class="container">
+    <h1>✅ To-Do List</h1>
+    <div class="input-section">
+      <input type="text" id="taskInput" placeholder="Add a new task...">
+      <select id="category">
+        <option value="General">General</option>
+        <option value="Work">Work</option>
+        <option value="Personal">Personal</option>
+      </select>
+      <button onclick="addTask()">➕</button>
+    </div>
+
+    <div class="filters">
+      <button onclick="filterTasks('all')">All</button>
+      <button onclick="filterTasks('active')">Pending</button>
+      <button onclick="filterTasks('completed')">Completed</button>
+      <input type="text" id="searchInput" onkeyup="searchTasks()" placeholder="🔍 Search tasks">
+    </div>
+
     <ul id="taskList"></ul>
-    <div class="actions">
-      <button onclick="toggleDarkMode()">🌓 Mode</button>
-      <button onclick="clearAll()">🗑️ Clear All</button>
+
+    <div class="controls">
+      <button onclick="clearAllTasks()">🗑️ Clear All</button>
+      <button onclick="toggleMode()">🎨 Toggle Mode</button>
+      <button id="installBtn" hidden>📥 Install App</button>
     </div>
   </div>
 
-  <script src="todo.js"></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
-  </script>
+  <script src="script.js"></script>
+  <script src="service-worker.js"></script>
 </body>
 </html>
