--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -1,44 +1,69 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pro To-Do List App</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Pro To-Do App</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="icon" href="icon-192.png">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#6a0dad">
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 </head>
 <body>
-  <div class="container">
-    <h1>✅ To-Do List</h1>
-    <div class="input-section">
-      <input type="text" id="taskInput" placeholder="Add a new task...">
-      <select id="category">
-        <option value="General">General</option>
-        <option value="Work">Work</option>
-        <option value="Personal">Personal</option>
-      </select>
-      <button onclick="addTask()">➕</button>
-    </div>
+  <div class="app">
+    <header>
+      <h1>🟪 Pro To-Do App</h1>
+      <button id="toggleTheme">🌙</button>
+    </header>
 
-    <div class="filters">
-      <button onclick="filterTasks('all')">All</button>
-      <button onclick="filterTasks('active')">Pending</button>
-      <button onclick="filterTasks('completed')">Completed</button>
-      <input type="text" id="searchInput" onkeyup="searchTasks()" placeholder="🔍 Search tasks">
-    </div>
+    <section class="input-section">
+      <input type="text" id="taskInput" placeholder="➕ Add new task">
+      <input type="date" id="dueDate">
+      <select id="category">
+        <option value="📚 Study">📚 Study</option>
+        <option value="💼 Work">💼 Work</option>
+        <option value="🏠 Personal">🏠 Personal</option>
+      </select>
+      <button onclick="addTask()">Add</button>
+    </section>
+
+    <section class="search-filter">
+      <input type="text" id="searchInput" placeholder="🔍 Search tasks">
+      <div class="filters">
+        <button onclick="filterTasks('all')">All</button>
+        <button onclick="filterTasks('completed')">Completed</button>
+        <button onclick="filterTasks('pending')">Pending</button>
+      </div>
+    </section>
 
     <ul id="taskList"></ul>
 
-    <div class="controls">
-      <button onclick="clearAllTasks()">🗑️ Clear All</button>
-      <button onclick="toggleMode()">🎨 Toggle Mode</button>
-      <button id="installBtn" hidden>📥 Install App</button>
-    </div>
+    <footer>
+      <div id="stats"></div>
+      <button onclick="clearAll()">🗑️ Clear All</button>
+      <button id="installBtn" style="display:none;">📥 Install App</button>
+    </footer>
   </div>
 
   <script src="script.js"></script>
-  <script src="service-worker.js"></script>
+  <script>
+    let deferredPrompt;
+    const installBtn = document.getElementById('installBtn');
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      installBtn.style.display = 'inline-block';
+      installBtn.addEventListener('click', () => {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then(choice => {
+          if (choice.outcome === 'accepted') console.log('App Installed');
+          deferredPrompt = null;
+        });
+      });
+    });
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('service-worker.js');
+  </script>
 </body>
 </html>
