Add: Pro To-Do App PWA with advanced features

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
       <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
     <li>
-      <a href="todo-app/" target="_blank">📝 To-Do List App</a> – A lightweight PWA to manage daily tasks with offline support.
+      <a href="todo-pro" target="_blank">✅ Pro To-Do App</a> – A powerful task manager with PWA features.
     </li>
+
   </ul>
 </section>
 
