--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
     <li>
-      <a href="todo-pro" target="_blank">✅ Pro To-Do App</a> – A powerful task manager with PWA features.
+      <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
     </li>
 
   </ul>
