Fix: Added comment for todo-app link update

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <li>
       <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
     </li>
+    <!-- Link fixed to point to todo-app -->
     <li>
       <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
     </li>
