--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -1,9 +1,8 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pro To-Do App</title>
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
@@ -13,9 +12,6 @@
 </head>
 <body>
   <div class="container">
-    <!-- everything from <h1> to Install button goes here -->
-  </div>
-  <div class="app">
     <header>
       <h1>🟪 Pro To-Do App</h1>
       <button id="toggleTheme">🌙</button>
@@ -42,13 +38,22 @@
     </section>
 
     <ul id="taskList"></ul>
+<footer>
+  <div id="stats"></div>
+  <button onclick="clearAll()">🗑️ Clear All</button>
+  <button onclick="exportTasks('txt')">⬇️ Export TXT</button>
+  <button onclick="exportTasks('json')">⬇️ Export JSON</button>
+  <button id="installBtn" style="display:none;">📥 Install App</button>
+</footer>
 
-    <footer>
-      <div id="stats"></div>
-      <button onclick="clearAll()">🗑️ Clear All</button>
-      <button id="installBtn" style="display:none;">📥 Install App</button>
-    </footer>
+<!-- Audio Effects -->
+<audio id="ding" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9e3f979b5.mp3?filename=click-124467.mp3" preload="auto"></audio>
+<audio id="delete" src="https://cdn.pixabay.com/download/audio/2022/03/18/audio_f3a993177d.mp3?filename=pop-94319.mp3" preload="auto"></audio>
+<audio id="complete" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_48bde99868.mp3?filename=notification-112698.mp3" preload="auto"></audio>
+
   </div>
+
+  <audio id="ding" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9e3f979b5.mp3?filename=click-124467.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
   <script>
@@ -67,10 +72,8 @@
       });
     });
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('service-worker.js');
-  </script>
 
-  <!-- Floating bubbles -->
-  <script>
+    // Floating bubbles
     for (let i = 0; i < 20; i++) {
       const bubble = document.createElement("div");
       const size = Math.random() * 60 + 20 + "px";
