--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -38,25 +38,24 @@
     </section>
 
     <ul id="taskList"></ul>
-<footer>
-  <div id="stats"></div>
-  <button onclick="clearAll()">🗑️ Clear All</button>
-  <button onclick="exportTasks('txt')">⬇️ Export TXT</button>
-  <button onclick="exportTasks('json')">⬇️ Export JSON</button>
-  <button id="installBtn" style="display:none;">📥 Install App</button>
-</footer>
 
-<!-- Audio Effects -->
-<audio id="ding" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9e3f979b5.mp3?filename=click-124467.mp3" preload="auto"></audio>
-<audio id="delete" src="https://cdn.pixabay.com/download/audio/2022/03/18/audio_f3a993177d.mp3?filename=pop-94319.mp3" preload="auto"></audio>
-<audio id="complete" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_48bde99868.mp3?filename=notification-112698.mp3" preload="auto"></audio>
-
+    <footer>
+      <div id="stats"></div>
+      <button onclick="clearAll()">🗑️ Clear All</button>
+      <button onclick="exportTasks('txt')">⬇️ Export TXT</button>
+      <button onclick="exportTasks('json')">⬇️ Export JSON</button>
+      <button id="installBtn" style="display:none;">📥 Install App</button>
+    </footer>
   </div>
 
+  <!-- Audio Effects -->
   <audio id="ding" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9e3f979b5.mp3?filename=click-124467.mp3" preload="auto"></audio>
+  <audio id="delete" src="https://cdn.pixabay.com/download/audio/2022/03/18/audio_f3a993177d.mp3?filename=pop-94319.mp3" preload="auto"></audio>
+  <audio id="complete" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_48bde99868.mp3?filename=notification-112698.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
   <script>
+    // Install prompt handler
     let deferredPrompt;
     const installBtn = document.getElementById('installBtn');
     window.addEventListener('beforeinstallprompt', (e) => {
