--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -4,27 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pro To-Do App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#6a0dad" />
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" />
 </head>
 <body>
   <div class="container">
     <h1>🟪 Pro To-Do App</h1>
-    <div class="input-group">
-      <input type="text" id="taskInput" placeholder="Add new task">
-      <input type="date" id="dueDate">
+    <div class="input-section">
+      <input type="text" id="taskInput" placeholder="Add new task" />
+      <input type="date" id="dueDate" />
       <select id="category">
-        <option>📚 Study</option>
-        <option>💼 Work</option>
-        <option>🏠 Personal</option>
+        <option value="📚 Study">📚 Study</option>
+        <option value="💼 Work">💼 Work</option>
+        <option value="🏠 Personal">🏠 Personal</option>
       </select>
       <button onclick="addTask()">Add</button>
     </div>
 
-    <p>This is a sample layout with floating bubbles 🎈</p>
+    <input type="text" id="searchInput" placeholder="Search tasks" />
 
-    <div class="filter-buttons">
+    <div class="filters">
       <button onclick="filterTasks('all')">All</button>
       <button onclick="filterTasks('completed')">Completed</button>
       <button onclick="filterTasks('pending')">Pending</button>
@@ -32,28 +34,54 @@
 
     <ul id="taskList"></ul>
 
-    <div class="footer-buttons">
-      <button onclick="clearAll()">🗑 Clear All</button>
-      <button onclick="exportTasks('txt')">⬇ Export TXT</button>
-      <button onclick="exportTasks('json')">⬇ Export JSON</button>
+    <div class="actions">
+      <button onclick="clearAll()">🗑️ Clear All</button>
+      <button onclick="exportTasks('txt')">⬇️ Export TXT</button>
+      <button onclick="exportTasks('json')">⬇️ Export JSON</button>
       <button id="installBtn" style="display:none;">📥 Install App</button>
     </div>
   </div>
 
-  <!-- Floating bubbles -->
+  <!-- Audio -->
+  <audio id="ding" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9e3f979b5.mp3?filename=click-124467.mp3" preload="auto"></audio>
+  <audio id="delete" src="https://cdn.pixabay.com/download/audio/2022/03/18/audio_f3a993177d.mp3?filename=pop-94319.mp3" preload="auto"></audio>
+  <audio id="complete" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_48bde99868.mp3?filename=notification-112698.mp3" preload="auto"></audio>
+
+  <!-- JS -->
+  <script src="script.js"></script>
   <script>
+    // Install prompt
+    let deferredPrompt;
+    const installBtn = document.getElementById('installBtn');
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      installBtn.style.display = 'inline-block';
+      installBtn.addEventListener('click', () => {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then(choice => {
+          if (choice.outcome === 'accepted') console.log('App Installed');
+          deferredPrompt = null;
+        });
+      });
+    });
+
+    // Register service worker
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+
+    // Floating bubbles
     for (let i = 0; i < 20; i++) {
       const bubble = document.createElement("div");
+      const size = Math.random() * 60 + 20 + "px";
       bubble.classList.add("bubble");
       bubble.style.left = Math.random() * 100 + "vw";
-      const size = Math.random() * 50 + 20 + "px";
       bubble.style.width = size;
       bubble.style.height = size;
       bubble.style.animationDuration = 10 + Math.random() * 10 + "s";
       document.body.appendChild(bubble);
     }
   </script>
-
-  <script src="script.js"></script>
 </body>
 </html>
