🔗 Update project links to open apps directly

--- a/index.html
+++ b/index.html
@@ -24,18 +24,16 @@
   </section>
 
   <section class="projects">
-  <h2>Projects</h2>
-  <ul>
-    <li>
-      <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
-    </li>
-    <!-- Link fixed to point to todo-app -->
-    <li>
-      <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
-    </li>
-
-  </ul>
-</section>
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <a href="grade-calculator/index.html" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
+      </li>
+      <li>
+        <a href="todo-app/index.html" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
+      </li>
+    </ul>
+  </section>
 
   <section class="contact">
     <h2>Contact Me</h2>
@@ -44,7 +42,6 @@
     <p>🌍 GitHub: <a href="https://github.com/Lavanyaravikumar2004" target="_blank">github.com/Lavanyaravikumar2004</a></p>
   </section>
 
-  <!-- Typing animation script -->
   <script>
     const text = "LAVANYA R";
     const element = document.querySelector(".typing-text");
