--- a/grade-calculator/grade-calculator/index.html
+++ b/grade-calculator/grade-calculator/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,36 +15,17 @@
 <body>
   <div class="container">
     <h2><span class="typing-text">Student Grade Calculator</span></h2>
-    
     <div id="inputs">
-      <div class="subject">
-        <input type="number" placeholder="Subject 1 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
-      <div class="subject">
-        <input type="number" placeholder="Subject 2 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
-      <div class="subject">
-        <input type="number" placeholder="Subject 3 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
+      <input type="number" placeholder="Subject 1 Marks" />
+      <input type="number" placeholder="Subject 2 Marks" />
+      <input type="number" placeholder="Subject 3 Marks" />
     </div>
-
     <button onclick="addSubject()">➕ Add Subject</button>
     <button onclick="calculateGrade()">✅ Calculate</button>
-    <button onclick="sortSubjects()">🔢 Sort by Marks</button>
     <p id="result"></p>
     <button onclick="downloadResult()">⬇️ Download Result</button>
     <button onclick="toggleDark()">🌓 Toggle Dark Mode</button>
     <button id="installBtn" style="display:none; margin-top:15px;">📲 Install App</button>
-
-    <select id="themeSelector" onchange="changeTheme()" style="margin-top: 10px; padding: 10px;">
-      <option value="default">🎨 Default</option>
-      <option value="blue">💙 Blue</option>
-      <option value="dark">🌑 Dark</option>
-      <option value="green">💚 Green</option>
-    </select>
   </div>
 
   <script src="grade.js"></script>
