✅ Move Grade Calculator into separate folder for deployment

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <h2>Projects</h2>
     <ul>
       <li>
-        <a href="grade-calculator/index.html" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
+        <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
       </li>
       <li>
-        <a href="todo-app/index.html" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
+        <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
       </li>
     </ul>
   </section>
