🖼️ Add lazy loading to images for performance boost

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header-flex">
-    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic">
+    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic" loading="lazy">
     <div class="intro">
       <h1><span class="typing-text"></span></h1>
       <p>Computer Science Student | Aspiring Developer</p>
