--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -47,5 +47,15 @@
   </div>
 
   <script src="grade.js"></script>
+
+  <!-- ✅ Service Worker Registration Script -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('✅ Service Worker registered successfully.'))
+        .catch(error => console.log('❌ Service Worker registration failed:', error));
+    }
+  </script>
+
 </body>
 </html>
