🔁 Trigger SW registration update

--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -48,7 +48,7 @@
 
   <script src="grade.js"></script>
 
-  <!-- ✅ Service Worker Registration Script -->
+  <!-- Service Worker registration fixed -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
