🛠️ Fix SW redundant issue with force activation

--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -50,12 +50,15 @@
 
   <!-- Service Worker registration fixed -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('✅ Service Worker registered successfully.'))
-        .catch(error => console.log('❌ Service Worker registration failed:', error));
-    }
-  </script>
-
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js').then(reg => {
+        console.log('✅ Service Worker registered:', reg);
+      }).catch(err => {
+        console.error('❌ SW registration failed:', err);
+      });
+    });
+  }
+</script>
 </body>
 </html>
