--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -52,13 +52,11 @@
   <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('service-worker.js').then(reg => {
-        console.log('✅ Service Worker registered:', reg);
-      }).catch(err => {
-        console.error('❌ SW registration failed:', err);
-      });
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('✅ SW registered:', reg))
+        .catch(err => console.error('❌ SW registration failed:', err));
     });
   }
-</script>
+</script> 
 </body>
 </html>
