--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -1,62 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grade Calculator</title>
-  <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#6a0dad" />
-  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" loading="lazy"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" loading="lazy"/>
-  <link rel="stylesheet" href="grade.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <div class="container">
-    <h2><span class="typing-text">Student Grade Calculator</span></h2>
-    
-    <div id="inputs">
-      <div class="subject">
-        <input type="number" placeholder="Subject 1 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
-      <div class="subject">
-        <input type="number" placeholder="Subject 2 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
-      <div class="subject">
-        <input type="number" placeholder="Subject 3 Marks" readonly onclick="this.readOnly=false;" onblur="this.readOnly=true;" />
-        <button onclick="deleteSubject(this)">🗑️</button>
-      </div>
-    </div>
+const CACHE_NAME = 'grade-calculator-v4';
+const urlsToCache = [
+  './',
+  './index.html',
+  './grade.css',
+  './grade.js',
+  './manifest.json',
+  './icon-192.png',
+  './icon-512.png'
+];
 
-    <button onclick="addSubject()">➕ Add Subject</button>
-    <button onclick="calculateGrade()">✅ Calculate</button>
-    <button onclick="sortSubjects()">🔢 Sort by Marks</button>
-    <p id="result"></p>
-    <button onclick="downloadResult()">⬇️ Download Result</button>
-    <button onclick="toggleDark()">🌓 Toggle Dark Mode</button>
-    <button id="installBtn" style="display:none; margin-top:15px;">📲 Install App</button>
+self.addEventListener('install', event => {
+  self.skipWaiting();
+  event.waitUntil(
+    caches.open(CACHE_NAME).then(cache => cache.addAll(urlsToCache))
+  );
+});
 
-    <select id="themeSelector" onchange="changeTheme()" style="margin-top: 10px; padding: 10px;">
-      <option value="default">🎨 Default</option>
-      <option value="blue">💙 Blue</option>
-      <option value="dark">🌑 Dark</option>
-      <option value="green">💚 Green</option>
-    </select>
-  </div>
+self.addEventListener('activate', event => {
+  event.waitUntil(clients.claim());
+});
 
-  <script src="grade.js"></script>
-
-  <!-- Service Worker registration fixed -->
-  <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(reg => console.log('✅ SW registered:', reg))
-        .catch(err => console.error('❌ SW registration failed:', err));
-    });
-  }
-</script> 
-</body>
-</html>
+self.addEventListener('fetch', event => {
+  event.respondWith(
+    caches.match(event.request).then(response => response || fetch(event.request))
+  );
+});
