--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -1,27 +1,68 @@
-const CACHE_NAME = 'grade-calculator-v4';
-const urlsToCache = [
-  './',
-  './index.html',
-  './grade.css',
-  './grade.js',
-  './manifest.json',
-  './icon-192.png',
-  './icon-512.png'
-];
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LAVANYA R | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+</head>
+<body>
 
-self.addEventListener('install', event => {
-  self.skipWaiting();
-  event.waitUntil(
-    caches.open(CACHE_NAME).then(cache => cache.addAll(urlsToCache))
-  );
-});
+  <header class="header-flex">
+    <img src="lavanya.jpg" alt="Lavanya R" class="profile-pic" loading="lazy">
+    <div class="intro">
+      <h1><span class="typing-text"></span></h1>
+      <p>Computer Science Student | Aspiring Developer</p>
+      <a href="LavanyaResume.pdf" class="btn" download>📄 Download Resume</a>
+    </div>
+  </header>
 
-self.addEventListener('activate', event => {
-  event.waitUntil(clients.claim());
-});
+  <section class="about">
+    <h2>About Me</h2>
+    <p>I’m a curious learner, passionate about web development and eager to explore real-world software solutions. I'm currently learning HTML, CSS, JavaScript, and GitHub.</p>
+  </section>
 
-self.addEventListener('fetch', event => {
-  event.respondWith(
-    caches.match(event.request).then(response => response || fetch(event.request))
-  );
-});
+  <section class="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <a href="grade-calculator" target="_blank">🧮 Grade Calculator</a> – A simple tool to calculate total, percentage, and grade.
+      </li>
+      <li>
+        <a href="todo-app" target="_blank">✅ To-Do App</a> – A powerful task manager with PWA features.
+      </li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <h2>Contact Me</h2>
+    <p>📧 Email: <a href="mailto:lavanyaravikumar2004@gmail.com">lavanyaravikumar2004@gmail.com</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/lavanya-r-7a55492b3" target="_blank">linkedin.com/in/lavanya</a></p>
+    <p>🌍 GitHub: <a href="https://github.com/Lavanyaravikumar2004" target="_blank">github.com/Lavanyaravikumar2004</a></p>
+  </section>
+
+  <script>
+    const text = "LAVANYA R";
+    const element = document.querySelector(".typing-text");
+    let index = 0;
+    function type() {
+      if (index < text.length) {
+        element.innerHTML += text.charAt(index);
+        index++;
+        setTimeout(type, 120);
+      }
+    }
+    type();
+
+    // ✅ Service Worker Registration
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/grade-calculator/service-worker.js')
+        .then(reg => console.log('✅ Service Worker registered'))
+        .catch(err => console.error('❌ SW registration failed:', err));
+    });
+  }
+</script>
+</body>
+</html>
