--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -51,7 +51,7 @@
   <!-- ✅ Service Worker Registration Script -->
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      nnavigator.serviceWorker.register('/grade-calculator/service-worker.js')
         .then(() => console.log('✅ Service Worker registered successfully.'))
         .catch(error => console.log('❌ Service Worker registration failed:', error));
     }
