--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -6,8 +6,8 @@
   <title>Grade Calculator</title>
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#6a0dad" />
-  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" loading="lazy"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" loading="lazy"/>
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png" />
   <link rel="stylesheet" href="grade.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
 </head>
@@ -47,15 +47,5 @@
   </div>
 
   <script src="grade.js"></script>
-
-  <!-- ✅ Service Worker Registration Script -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      nnavigator.serviceWorker.register('/grade-calculator/service-worker.js')
-        .then(() => console.log('✅ Service Worker registered successfully.'))
-        .catch(error => console.log('❌ Service Worker registration failed:', error));
-    }
-  </script>
-
 </body>
 </html>
