--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -47,5 +47,14 @@
   </div>
 
   <script src="grade.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/grade-calculator/service-worker.js')
+        .then(reg => console.log('✅ Service Worker registered:', reg))
+        .catch(err => console.error('❌ Service Worker registration failed:', err));
+    });
+  }
+</script>
 </body>
 </html>
